--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>SpaceShip - Beta</title>
-		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
-		<link type="text/css" href="style.css" rel="stylesheet">
+		<title>SpaceShip - Beta 1.0</title>
 	</head>
 	<body>
-		<canvas id="canvas">Sorry your browser sucks and does not support html5.</canvas>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script src="jquery.cookie.js"></script>
-		<script src="main.js"></script>
-    </body>
+		<script src="js/game.js" type="text/javascript"></script>
+		<script src="js/game.config.js" type="text/javascript"></script>
+		<script src="js/game.star.js" type="text/javascript"></script>
+		<script src="js/game.spaceship.js" type="text/javascript"></script>
+		<script src="js/game.ufo.js" type="text/javascript"></script>
+		<script src="js/game.sound.js" type="text/javascript"></script>
+		<script src="js/game.upgrades.js" type="text/javascript"></script>
+		<script src="js/game.time.js" type="text/javascript"></script>
+		<script src="js/game.controls.js" type="text/javascript"></script>
+		<script src="js/game.state.js" type="text/javascript"></script>
+		<script type="text/javascript">
+			game.init();
+		</script>
+  </body>
 </html>
