--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script src="js/game.time.js" type="text/javascript"></script>
 		<script src="js/game.controls.js" type="text/javascript"></script>
 		<script src="js/game.state.js" type="text/javascript"></script>
+		<script src="js/game.explosion.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			game.init();
 		</script>
